src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AssessmentCode__c</fullName>
        <externalId>true</externalId>
        <label>Assessment Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Maximum time for assessment in minutes</description>
        <inlineHelpText>Maximum time for assessment in minutes</inlineHelpText>
        <label>Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HybridIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the assessment is a hybrid or not</description>
        <inlineHelpText>Whether or not the assessment is a hybrid or not</inlineHelpText>
        <label>Hybrid Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Instructions to accompany the product in emails etc.</description>
        <inlineHelpText>Instructions to accompany the product in automated emails such as assessment instructions</inlineHelpText>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VendorAssessmentName__c</fullName>
        <description>This is what the vendor calls this assessment</description>
        <label>Vendor Assessment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>